--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
       path: /h2-console # H2 Console Path
   datasource:
     driver-class-name: org.h2.Driver # Database 를 H2 선언
-    url: jdbc:h2:~/test # H2 접속 정보
+    url: jdbc:h2:~/layered-architecture # H2 접속 정보
     username: sa # H2 접속 username
     password: 1234 # H2 접속 password
   jpa:
